--- a/src/main/resources/templates/manager/roleList.html
+++ b/src/main/resources/templates/manager/roleList.html
@@ -106,7 +106,11 @@
 					<td th:text="${account.role}"></td> -->
 					<td th:if="${session.account.role} == 'admin'">
 						<a class="btn btn-danger" th:href="@{'javascript:deleteById(' + ${role.id} + ');'}">删除</a> 
-						<a class="btn btn-info" th:href="@{'/manager/rolePermissions/' + ${role.id}}">修改</a> 
+						<th:block th:each="permission : ${session.account.permissions}">
+							<th:block th:if="permission.u">
+								<a class="btn btn-info" th:href="@{'/manager/rolePermissions/' + ${role.id}}">修改</a> 
+							</th:block>
+						</th:block>
 					</td>
 				</tr> <!-- "${}" 表示的是从scope动态取值 -->
 			</tbody>
@@ -167,6 +171,10 @@
 						alert(data.message);
 					}
 				}); 
+			}
+			
+			function hasModifyPermission(obj) {
+				console.log(obj);
 			}
 		</script>
 	</body>
