--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 		          <ul class="dropdown-menu">
 		          	<li><a href="/manager/accountList">账号列表</a></li>
 		            <li><a href="/manager/roleList">角色管理</a></li>
-		            <li><a href="/manager/permissionList">角色管理</a></li>
+		            <li><a href="/manager/permissionList">权限管理</a></li>
 		          </ul>
 		        </li>
 		      </ul>
